gccida/c3/gen_struct_or_union_type_die
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_struct_or_union_type_die/src/dwarf2out.c:11383:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *vindex; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_struct_or_union_type_die/src/dwarf2out.c:11386:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_struct_or_union_type_die/src/dwarf2out.c:11442:17: error: use of undeclared identifier 'dwarf_tag'
v9 = new_die( ( dwarf_tag)( 4 * ( *( ( _BYTE *)&type->block.common + 16) != 20) + 19), v8, type); 
                ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/gen_struct_or_union_type_die/src/obj/dwarf2out.o] Error 1
